# Email_Server_Backend

./: .gitignore  CMakeLists.txt  DEPLOYMENT.md  Dockerfile  MIGRATION_GUIDE.md  PRODUCTION_CHANGES.md  PRODUCTION_INTEGRATION.md  PRODUCTION_READINESS.md  PRODUCTION_READINESS_FINAL.md  README.md  README_PRODUCTION.md  bad.yml  docker-compose.yml  run.md
config/: bad.yml  example.server.yml  server.yml  users.yml
src/: main.cpp
src/admin/: admin_auth.cpp  admin_auth.h  admin_routes.cpp  admin_routes.h  admin_server.cpp  admin_server.h
src/antispam/: auth_results.h  dkim_canon.cpp  dkim_canon.h  dkim_signer.cpp  dkim_signer.h  dkim_verifier.cpp  dkim_verifier.h  dmarc_evaluator.cpp  dmarc_evaluator.h  spf_checker.cpp  spf_checker.h  spf_evaluator.cpp  spf_evaluator.h  spf_macro.cpp  spf_macro.h  spf_parser.cpp  spf_parser.h  spf_record.h
src/antivirus/: virus_scanner.cpp  virus_scanner.h
src/core/: app_lifecycle.cpp  app_lifecycle.h  audit_log.cpp  audit_log.h  auth_manager.cpp  auth_manager.h  base64.cpp  base64.h  config_loader.cpp  config_loader.h  connection_manager.cpp  connection_manager.h  crash_containment.cpp  crash_containment.h  distributed_auth_manager.cpp  distributed_auth_manager.h  i_auth_manager.h  input_validator.cpp  input_validator.h  logger.cpp  logger.h  password_hash.cpp  password_hash.h  rate_limiter.cpp  rate_limiter.h  readiness_state.cpp  readiness_state.h  server_context.cpp  server_context.h  shutdown_coordinator.cpp  shutdown_coordinator.h  ssl_raii.h  tls_context.cpp  tls_context.h  tls_enforcement.cpp  tls_enforcement.h
src/delivery/: smtp_client.cpp  smtp_client.h
src/dns/: dns_packet.cpp  dns_packet.h  dns_resolver.cpp  dns_resolver.h  dns_types.h
src/ha/: ha_controller.cpp  ha_controller.h  leader_election.cpp  leader_election.h
src/imap/: flags_index.cpp  flags_index.h  imap_server.cpp  imap_server.h  imap_session.cpp  imap_session.h
src/mime/: mime_decoder.cpp  mime_decoder.h  mime_header.h  mime_message.h  mime_parser.cpp  mime_parser.h  mime_part.h
src/monitoring/: health.cpp  health.h  http_metrics_server.cpp  http_metrics_server.h  metrics.cpp  metrics.h
src/policy/: attachment_policy.cpp  attachment_policy.h  policy_result.h
src/queue/: mail_queue.cpp  mail_queue.h  retry_policy.h  retry_worker.cpp  retry_worker.h
src/retro/: retro_action.h  retro_event.h  retro_log.cpp  retro_log.h  retro_manager.cpp  retro_manager.h
src/smtp/: smtp_server.cpp  smtp_server.h  smtp_session.cpp  smtp_session.h
src/spam/: spam_engine.cpp  spam_engine.h  spam_rules.cpp  spam_rules.h
src/storage/: mail_store.cpp  mail_store.h
src/threat_intel/: hash_reputation.cpp  hash_reputation.h  intel_feedback.cpp  intel_feedback.h  ioc_store.cpp  ioc_store.h  sender_reputation.cpp  sender_reputation.h  threat_types.h
src/virus/: cloud_provider.h  cloud_provider_virustotal.cpp  cloud_provider_virustotal.h  cloud_scan_result.h  cloud_scan_worker.cpp  cloud_scan_worker.h  cloud_scanner.cpp  cloud_scanner.h  sandbox_engine.cpp  sandbox_engine.h  sandbox_provider.h  sandbox_provider_anyrun.cpp  sandbox_provider_anyrun.h  sandbox_verdict_store.cpp  sandbox_verdict_store.h  virus_verdict_store.cpp  virus_verdict_store.h
tools/: migrate_passwords.cpp
